Fix ticket content overflow and ticket content having to be utf8 decoded.

--- a/src/styles/ticket.less
+++ b/src/styles/ticket.less
@@ -32,7 +32,8 @@
 	.content {
 		font-size: 13px;
 
-		margin:   8px;
+		height:   88px;
+		margin:   4px;
 		overflow: hidden;
 	}
 }
